添加了 LogicPackageLoader 和 LogicModuleLoader，尚未测试。

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "circuit",
     "logic"
   ],
-  "author": "hippospark@gmail.com",
+  "author": "Hippo Spark <hippospark@gmail.com> (https://twitter.com/hemashushu)",
   "license": "SEE LICENSE IN <LICENSE.md>",
   "bugs": {
     "url": "https://github.com/hemashushu/jslogiccircuit/issues"
