准备“使用代码构建逻辑模块的方式”的单元测试。

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "js-yaml": "^4.0.0",
-    "jsbinary": "github:hemashushu/jsbinary"
+    "jsbinary": "github:hemashushu/jsbinary",
+    "jsfileconfig": "github:hemashushu/jsfileconfig"
   }
 }
