完成了基本的逻辑包和逻辑模块加载功能。

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsbinary": "github:hemashushu/jsbinary",
     "jsexception": "github:hemashushu/jsexception",
     "jsfileconfig": "github:hemashushu/jsfileconfig",
+    "jsfileutils": "github:hemashushu/jsfileutils",
     "jsobjectutils": "github:hemashushu/jsobjectutils"
   }
 }
