--- a/test/resources/sample_logic_package_by_code/logic-package.yaml
+++ b/test/resources/sample_logic_package_by_code/logic-package.yaml
@@ -1,5 +1,5 @@
-title: Sample Module Package (Code)
-description: A module package for unit testing.
+title: Sample Logic Package (Code)
+description: A logic package for unit testing.
 iconFilename: icon.png
 dependencies: []
 modules:
