重构完成，单元测试正在添加中。

--- a/test/resources/sample_logic_package_by_code/and-gate/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/and-gate/logic-module.yaml
@@ -2,5 +2,7 @@ title: AND Gate
 description: Logic "AND" Gate
 iconFilename: icon.png
 defaultParameters:
-  inputWireCount: 2
+  inputPinCount: 2
   bitWidth: 1
+group: "Base Gates"
+document: "Document about AND gate"
