添加了半加器、RS 锁存器，完成了单元测试。

--- a/test/resources/sample_logic_package_by_code/and-gate/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/and-gate/logic-module.yaml
@@ -1,8 +1,6 @@
 title: AND Gate
 description: Logic "AND" Gate
+# https://en.wikipedia.org/wiki/Logic_gate
 iconFilename: icon.png
-defaultParameters:
-  inputPinCount: 2
-  bitWidth: 1
-group: "Base Gates"
+group: "Logic"
 document: "Document about AND gate"
