--- a/test/resources/sample_logic_package_by_code/logic-package.yaml
+++ b/test/resources/sample_logic_package_by_code/logic-package.yaml
@@ -4,6 +4,7 @@ iconFilename: icon.png
 dependencies: []
 modules:
   - "and-gate"
+  - "and-gate-ext"
   - "nor-gate"
   - "xor-gate"
 mainModule: "and-gate"
