--- a/test/resources/sample_logic_package_by_code/nor-gate/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/nor-gate/logic-module.yaml
@@ -3,5 +3,5 @@ title[zh_CN]: 或非门
 description: Logic "NOR" Gate
 description[zh_CN]: 逻辑 “或非门”
 iconFilename: icon.png
-group: "Base Gates"
+group: "Logic"
 document: "Document about NOR gate"
