改名 inputPinNumber 为 inputPinCount

--- a/test/resources/sample_logic_package_by_code/and-gate-ext/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/and-gate-ext/logic-module.yaml
@@ -2,7 +2,7 @@ title: AND Gate Ext
 description: Logic "AND" Gate Extension
 iconFilename: icon.png
 defaultParameters:
-  inputPinNumber: 2
+  inputPinCount: 2
   bitWidth: 1
 group: "Logic"
 document: "Document about AND gate extension"
