添加了 Pin name（端口名称）的命名约束。

--- a/test/resources/sample_logic_package_by_config/rs/struct.yaml
+++ b/test/resources/sample_logic_package_by_config/rs/struct.yaml
@@ -6,7 +6,7 @@ inputPins:
 outputPins:
   - name: Q
     bitWidth: 1
-  - name: "~Q"
+  - name: "-Q"
     bitWidth: 1
 logicModules:
   - packageName: sample_logic_package_by_code
@@ -43,8 +43,8 @@ connections:
     previousPinName: Q
     nextModuleName: ''
     nextPinName: Q
-  - name: 'nor2-q-~q'
+  - name: 'nor2-q--q'
     previousModuleName: nor2
     previousPinName: Q
     nextModuleName: ''
-    nextPinName: '~Q'
+    nextPinName: '-Q'
