--- a/test/resources/sample_logic_package_by_code/logic-package.yaml
+++ b/test/resources/sample_logic_package_by_code/logic-package.yaml
@@ -3,9 +3,9 @@ description: A logic package for unit testing.
 iconFilename: icon.png
 dependencies: []
 modules:
-  - "and-gate"
-  - "and-gate-ext"
-  - "nor-gate"
-  - "or-gate"
-  - "xor-gate"
-mainModule: "and-gate"
+  - "and_gate"
+  - "and_gate_ext"
+  - "nor_gate"
+  - "or_gate"
+  - "xor_gate"
+mainModule: "and_gate"
