--- a/test/resources/sample_logic_package_by_code/and_gate/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/and_gate/logic-module.yaml
@@ -4,3 +4,10 @@ description: Logic "AND" Gate
 iconFilename: icon.png
 group: "Logic"
 document: "Document about AND gate"
+pins:
+  - name: A
+    description: Input pin A
+  - name: B
+    description: Input pin B
+  - name: Q
+    description: Output pin Q. The value of Q is `A & B`
