--- a/test/resources/sample_logic_package_by_code/and_gate_ext/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/and_gate_ext/logic-module.yaml
@@ -2,7 +2,26 @@ title: AND Gate Ext
 description: Logic "AND" Gate Extension
 iconFilename: icon.png
 defaultParameters:
-  inputPinCount: 2
-  bitWidth: 1
+  - name: inputPinCount
+    description: The count of input pins
+    value: 2
+    valueType: range
+    valueRange:
+      from: 1
+      to: 32
+  - name: bitWidth
+    description: The bit width of each pins
+    value: 1
+    valueType: range
+    valueRange:
+      from: 1
+      to: 32
+    # 此外还有 'option' 类型
+    # valueType: option
+    # valueOptions:
+    #   - 1
+    #   - 2
+    #   - 4
+    #   - 8
 group: "Logic"
 document: "Document about AND gate extension"
