将 LogicModuleItem 的 document 属性重命名为 documentIds。

--- a/test/resources/sample_logic_package_by_code/src/and_gate/logic-module.yaml
+++ b/test/resources/sample_logic_package_by_code/src/and_gate/logic-module.yaml
@@ -3,7 +3,8 @@ description: Logic "AND" Gate
 # https://en.wikipedia.org/wiki/Logic_gate
 iconFilename: icon.png
 group: "Logic"
-document: "Document about AND gate"
+documentIds:
+  - and_gate
 pins:
   - name: A
     description: Input pin A
