重新定义逻辑包（项目）的文件目录结构
添加了 PackageResourceLocator, PackageRepositoryManager, ConfigParameterResolver。
它们都通过了单元测试。

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jsexception": "github:hemashushu/jsexception",
         "jsfileconfig": "github:hemashushu/jsfileconfig",
         "jsfileutils": "github:hemashushu/jsfileutils",
-        "jsobjectutils": "github:hemashushu/jsobjectutils"
+        "jsobjectutils": "github:hemashushu/jsobjectutils",
+        "validate-npm-package-name": "^3.0.0"
     }
 }
