单元测试通过了新的项目文件目录结构。

--- a/test/resources/package-repository-2/package-by-code/module/and_gate_ext/logic-module.yaml
+++ b/test/resources/package-repository-2/package-by-code/module/and_gate_ext/logic-module.yaml
@@ -2,25 +2,18 @@ title: AND Gate Ext
 description: Logic "AND" Gate Extension
 iconFilename: icon.png
 defaultParameters:
-  - name: inputPinCount
+  inputPinCount:
     description: The count of input pins
     value: 2
     valueType: range
     valueRange:
       from: 2
       to: 32
-  - name: bitWidth
+  bitWidth:
     description: The bit width of each pins
     value: 1
     valueType: range
     valueRange:
       from: 1
       to: 32
-    # 此外还有 'option' 类型
-    # valueType: option
-    # valueOptions:
-    #   - 1
-    #   - 2
-    #   - 4
-    #   - 8
 group: "Logic"
