--- a/test/resources/package-repository-2/package-by-config/module/half_adder/struct.yaml
+++ b/test/resources/package-repository-2/package-by-config/module/half_adder/struct.yaml
@@ -9,11 +9,11 @@ outputPins:
   - name: C
     bitWidth: 1
 logicModules:
-  - packageName: sample_logic_package_by_code
+  - packageName: package-by-code
     moduleClassName: and_gate
     name: and1
     parameters: {}
-  - packageName: sample_logic_package_by_code
+  - packageName: package-by-code
     moduleClassName: xor_gate
     name: xor1
     parameters: {}
