--- a/test/resources/package-repository-2/package-by-config/logic-package.yaml
+++ b/test/resources/package-repository-2/package-by-config/logic-package.yaml
@@ -2,7 +2,7 @@ title: Sample Logic Package (Config)
 description: A logic package for unit testing.
 iconFilename: icon.png
 dependencies:
-  - "sample_logic_package_by_code"
+  - "package-by-code"
 modules:
   - "half_adder"
   - "oscillation"
