--- a/test/resources/package-repository-2/package-by-mix/logic-package.yaml
+++ b/test/resources/package-repository-2/package-by-mix/logic-package.yaml
@@ -2,8 +2,8 @@ title: Sample Logic Package (Mix)
 description: A logic package for unit testing.
 iconFilename: icon.png
 dependencies:
-  - "sample_logic_package_by_code"
-  - "sample_logic_package_by_config"
+  - "package-by-code"
+  - "package-by-config"
 modules:
   - "full_adder"
   - "four_bit_adder"
