--- a/test/resources/package-repository-2/package-by-code/logic-package.yaml
+++ b/test/resources/package-repository-2/package-by-code/logic-package.yaml
@@ -2,10 +2,4 @@ title: Sample Logic Package (Code)
 description: A logic package for unit testing.
 iconFilename: icon.png
 dependencies: []
-modules:
-  - "and_gate"
-  - "and_gate_ext"
-  - "nor_gate"
-  - "or_gate"
-  - "xor_gate"
-mainModule: "and_gate"
+mainSimulationModule: "and_gate_sim"
